implementing send to history queue after to execute script
