# model/Job.go
@@ -1,10 +1,10 @@
 package model
 
-import "time"
-
 type Job struct {
-	Name        string    `json:"name" binding:"required"`
-	Description string    `json:"description" binding:"required"`
-	Date        time.Time `json:"date" binding:"required"`
-	Priority    uint32    `json:"priority" binding:"required"`
+	Name        string `json:"name" binding:"required"`
+	Server      string `json:"server" binding:"required"`
+	Description string `json:"description" binding:"required"`
+	CmdExecute  string `json:"cmdExecute" binding:"required"`
+	Script      string `json:"script" binding:"required"`
+	Date        string `json:"date" binding:"required"`
 }
